viernes_que_no_es_ni_viernes_ni_juernes

--- a/Extraccion.ipynb
+++ b/Extraccion.ipynb
@@ -5321,7 +5321,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df2.to_csv('')"
+   ]
   }
  ],
  "metadata": {
