--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -659,7 +659,365 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_loc</th>\n",
+       "      <th>message</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>country</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>geo_code</th>\n",
+       "      <th>longitud_mensaje</th>\n",
+       "      <th>palabras</th>\n",
+       "      <th>refinado</th>\n",
+       "      <th>predictions</th>\n",
+       "      <th>mensajeprocesado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-10-10 11:19:05</td>\n",
+       "      <td>tomborelli</td>\n",
+       "      <td>Greenwich, CT</td>\n",
+       "      <td>Supporting @JoeBiden means packing the Supreme...</td>\n",
+       "      <td>Greenwich, CT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-73.63941   41.050217]</td>\n",
+       "      <td>144</td>\n",
+       "      <td>17</td>\n",
+       "      <td>['supporting', 'means', 'packing', 'supreme', ...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>supporting means packing the supreme court lib...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-10-10 09:39:10</td>\n",
+       "      <td>John_Di_Lemme</td>\n",
+       "      <td>(561) 847-3467</td>\n",
+       "      <td>@ABC13News @realDonaldTrump @JoeBiden Nancy Pe...</td>\n",
+       "      <td>West Palm Beach, FL</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-80.12262   26.721896]</td>\n",
+       "      <td>133</td>\n",
+       "      <td>15</td>\n",
+       "      <td>['nancy', 'pelosi', 'nuts', 'joe', 'biden', 'k...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>nancy pelosi nuts  joe biden and kamala harris...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-10-10 07:18:33</td>\n",
+       "      <td>sqlblues</td>\n",
+       "      <td>Weston-super-Mare, England</td>\n",
+       "      <td>@FenrirWolf26 @Stanhope2011VJ Britons have als...</td>\n",
+       "      <td>Weston-super-Mare, England</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>[-2.94513  51.346796]</td>\n",
+       "      <td>139</td>\n",
+       "      <td>17</td>\n",
+       "      <td>['britons', 'also', 'pumped', 'relentless', 'd...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>britons have also been pumped relentless diet ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020-10-10 06:56:05</td>\n",
+       "      <td>_walkforACure</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>US presidential debate officially cancelled\\n\\...</td>\n",
+       "      <td>East Midlands, England</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>[-0.838055 52.796791]</td>\n",
+       "      <td>87</td>\n",
+       "      <td>9</td>\n",
+       "      <td>['presidential', 'debate', 'officially', 'canc...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>presidential debate officially cancelled sent ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2020-10-10 06:14:37</td>\n",
+       "      <td>newollien</td>\n",
+       "      <td>Wales</td>\n",
+       "      <td>@blossomingabyss @JoeBiden Oh behave, you tit....</td>\n",
+       "      <td>Bridgend, Wales</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>GB</td>\n",
+       "      <td>[-3.58689  51.508115]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>21</td>\n",
+       "      <td>['behave', 'tit', 'trump', 'tactic', 'debate',...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>behave  you tit  trump  only tactic the debate...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  date      user_name                    user_loc  \\\n",
+       "1  2020-10-10 11:19:05     tomborelli               Greenwich, CT   \n",
+       "2  2020-10-10 09:39:10  John_Di_Lemme              (561) 847-3467   \n",
+       "4  2020-10-10 07:18:33       sqlblues  Weston-super-Mare, England   \n",
+       "5  2020-10-10 06:56:05  _walkforACure              United Kingdom   \n",
+       "6  2020-10-10 06:14:37      newollien                      Wales    \n",
+       "\n",
+       "                                             message  \\\n",
+       "1  Supporting @JoeBiden means packing the Supreme...   \n",
+       "2  @ABC13News @realDonaldTrump @JoeBiden Nancy Pe...   \n",
+       "4  @FenrirWolf26 @Stanhope2011VJ Britons have als...   \n",
+       "5  US presidential debate officially cancelled\\n\\...   \n",
+       "6  @blossomingabyss @JoeBiden Oh behave, you tit....   \n",
+       "\n",
+       "                    full_name         country country_code  \\\n",
+       "1               Greenwich, CT   United States           US   \n",
+       "2         West Palm Beach, FL   United States           US   \n",
+       "4  Weston-super-Mare, England  United Kingdom           GB   \n",
+       "5      East Midlands, England  United Kingdom           GB   \n",
+       "6             Bridgend, Wales  United Kingdom           GB   \n",
+       "\n",
+       "                  geo_code  longitud_mensaje  palabras  \\\n",
+       "1  [-73.63941   41.050217]               144        17   \n",
+       "2  [-80.12262   26.721896]               133        15   \n",
+       "4    [-2.94513  51.346796]               139        17   \n",
+       "5    [-0.838055 52.796791]                87         9   \n",
+       "6    [-3.58689  51.508115]               140        21   \n",
+       "\n",
+       "                                            refinado  predictions  \\\n",
+       "1  ['supporting', 'means', 'packing', 'supreme', ...            1   \n",
+       "2  ['nancy', 'pelosi', 'nuts', 'joe', 'biden', 'k...            1   \n",
+       "4  ['britons', 'also', 'pumped', 'relentless', 'd...            1   \n",
+       "5  ['presidential', 'debate', 'officially', 'canc...            1   \n",
+       "6  ['behave', 'tit', 'trump', 'tactic', 'debate',...            1   \n",
+       "\n",
+       "                                    mensajeprocesado  \n",
+       "1  supporting means packing the supreme court lib...  \n",
+       "2  nancy pelosi nuts  joe biden and kamala harris...  \n",
+       "4  britons have also been pumped relentless diet ...  \n",
+       "5  presidential debate officially cancelled sent ...  \n",
+       "6  behave  you tit  trump  only tactic the debate...  "
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tweet[df_tweet['predictions'] == 1].head(5) # neutral"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>user_name</th>\n",
+       "      <th>user_loc</th>\n",
+       "      <th>message</th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>country</th>\n",
+       "      <th>country_code</th>\n",
+       "      <th>geo_code</th>\n",
+       "      <th>longitud_mensaje</th>\n",
+       "      <th>palabras</th>\n",
+       "      <th>refinado</th>\n",
+       "      <th>predictions</th>\n",
+       "      <th>mensajeprocesado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2020-10-10 05:16:48</td>\n",
+       "      <td>JoerGolfmiester</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>@TheLeoTerrell @JoeBiden @SenKamalaHarris #Sle...</td>\n",
+       "      <td>Florida, USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-83.804475  27.698682]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>16</td>\n",
+       "      <td>['sleepyjoebiden', 'remember', 'last', 'time',...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>can  remember the last time wiped his butt  wo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2020-10-10 05:10:22</td>\n",
+       "      <td>colllleeen</td>\n",
+       "      <td>British Columbia</td>\n",
+       "      <td>I'll be honest... I don't understand the frami...</td>\n",
+       "      <td>Abbotsford, British Columbia</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>[-122.267074   49.086996]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>21</td>\n",
+       "      <td>['honest', 'understand', 'framing', 'vote', 'v...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>honest    don  understand the framing   vote...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2020-10-10 04:30:52</td>\n",
+       "      <td>Hutton8Eldon</td>\n",
+       "      <td>canton Lake, Ok.</td>\n",
+       "      <td>@swatkins109 @HeatherBarmore @Pangolin1214 @Jo...</td>\n",
+       "      <td>Oklahoma, USA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-98.716992  35.309046]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>16</td>\n",
+       "      <td>['joe', 'biden', 'care', 'americans', 'thing',...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>joe biden don  care about any americans  only ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2020-10-10 04:10:14</td>\n",
+       "      <td>proudamericanmm</td>\n",
+       "      <td>Philadelphia, PA</td>\n",
+       "      <td>If you believe this, DM me about some swamp la...</td>\n",
+       "      <td>Philadelphia, PA</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-75.117998  40.004866]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>26</td>\n",
+       "      <td>['believe', 'swamp', 'land', 'sale', 'jersey',...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>you believe this  about some swamp land for sa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2020-10-10 03:02:18</td>\n",
+       "      <td>mega_tron801</td>\n",
+       "      <td>O town, Utah</td>\n",
+       "      <td>Listen, there is no definitive proof of Biden ...</td>\n",
+       "      <td>Ogden, UT</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>US</td>\n",
+       "      <td>[-111.96507    41.217798]</td>\n",
+       "      <td>140</td>\n",
+       "      <td>20</td>\n",
+       "      <td>['listen', 'definitive', 'proof', 'biden', 'pe...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>listen  there definitive proof biden being ped...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   date        user_name          user_loc  \\\n",
+       "11  2020-10-10 05:16:48  JoerGolfmiester     United States   \n",
+       "13  2020-10-10 05:10:22       colllleeen  British Columbia   \n",
+       "17  2020-10-10 04:30:52     Hutton8Eldon  canton Lake, Ok.   \n",
+       "20  2020-10-10 04:10:14  proudamericanmm  Philadelphia, PA   \n",
+       "25  2020-10-10 03:02:18     mega_tron801     O town, Utah    \n",
+       "\n",
+       "                                              message  \\\n",
+       "11  @TheLeoTerrell @JoeBiden @SenKamalaHarris #Sle...   \n",
+       "13  I'll be honest... I don't understand the frami...   \n",
+       "17  @swatkins109 @HeatherBarmore @Pangolin1214 @Jo...   \n",
+       "20  If you believe this, DM me about some swamp la...   \n",
+       "25  Listen, there is no definitive proof of Biden ...   \n",
+       "\n",
+       "                       full_name        country country_code  \\\n",
+       "11                  Florida, USA  United States           US   \n",
+       "13  Abbotsford, British Columbia         Canada           CA   \n",
+       "17                 Oklahoma, USA  United States           US   \n",
+       "20              Philadelphia, PA  United States           US   \n",
+       "25                     Ogden, UT  United States           US   \n",
+       "\n",
+       "                     geo_code  longitud_mensaje  palabras  \\\n",
+       "11    [-83.804475  27.698682]               140        16   \n",
+       "13  [-122.267074   49.086996]               140        21   \n",
+       "17    [-98.716992  35.309046]               140        16   \n",
+       "20    [-75.117998  40.004866]               140        26   \n",
+       "25  [-111.96507    41.217798]               140        20   \n",
+       "\n",
+       "                                             refinado  predictions  \\\n",
+       "11  ['sleepyjoebiden', 'remember', 'last', 'time',...            0   \n",
+       "13  ['honest', 'understand', 'framing', 'vote', 'v...            0   \n",
+       "17  ['joe', 'biden', 'care', 'americans', 'thing',...            0   \n",
+       "20  ['believe', 'swamp', 'land', 'sale', 'jersey',...            0   \n",
+       "25  ['listen', 'definitive', 'proof', 'biden', 'pe...            0   \n",
+       "\n",
+       "                                     mensajeprocesado  \n",
+       "11  can  remember the last time wiped his butt  wo...  \n",
+       "13    honest    don  understand the framing   vote...  \n",
+       "17  joe biden don  care about any americans  only ...  \n",
+       "20  you believe this  about some swamp land for sa...  \n",
+       "25  listen  there definitive proof biden being ped...  "
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tweet[df_tweet['predictions'] == 0].head(5) # negativo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -690,6 +1048,15 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_tweet.to_csv('./Outputs/df_tweets_pred.csv', index=False)"
+   ]
   },
   {
    "cell_type": "code",
